# XIV-Crafter

./: Cargo.toml  README.md
src/: globals.rs  main.rs
src/item/: id.rs  item.rs  item_requirement.rs  mod.rs
src/query/: mod.rs  query.rs  query_result.rs
