[package]
name = "xiv-crafter"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Sakul Flee <me@sakul-flee.de>"]
description = "A Website tool to help you with crafting in Final Fantasy XIV"

[dependencies]
garlandtools = "0.1.1"
tokio = { version = "1", features = ["full"] }
lazy_static = "1.4.0"
serde = "1"
serde_json = "1"
